--- a/.github/workflows/esbmc_workflow.yml
+++ b/.github/workflows/esbmc_workflow.yml
@@ -9,4 +9,4 @@ jobs:
             - name: Run ESBMC action
               uses: esbmc/esbmc-action@v2
               with:
-                esbmc-options: --incremental-bmc --include . --inlcude unix/
+                esbmc-options: --incremental-bmc --include . --include unix/
